feat: improve api responses