@@ -1,30 +1,39 @@
 package com.lucashthiele.routine_revo_server.usecase.user;
 
+import com.lucashthiele.routine_revo_server.domain.routine.Routine;
 import com.lucashthiele.routine_revo_server.domain.shared.PaginatedResult;
 import com.lucashthiele.routine_revo_server.domain.user.Role;
 import com.lucashthiele.routine_revo_server.domain.user.Status;
 import com.lucashthiele.routine_revo_server.domain.user.User;
 import com.lucashthiele.routine_revo_server.domain.user.UserFilter;
+import com.lucashthiele.routine_revo_server.domain.workout.WorkoutSession;
+import com.lucashthiele.routine_revo_server.gateway.RoutineGateway;
 import com.lucashthiele.routine_revo_server.gateway.UserGateway;
+import com.lucashthiele.routine_revo_server.gateway.WorkoutGateway;
 import com.lucashthiele.routine_revo_server.usecase.UseCaseInterface;
 import com.lucashthiele.routine_revo_server.usecase.user.input.SearchMembersInput;
+import com.lucashthiele.routine_revo_server.usecase.user.output.AssignedRoutineOutput;
 import com.lucashthiele.routine_revo_server.usecase.user.output.ListUsersOutput;
 import com.lucashthiele.routine_revo_server.usecase.user.output.UserOutput;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
+import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SearchMembersUseCase implements UseCaseInterface<ListUsersOutput, SearchMembersInput> {
   private static final Logger LOGGER = LoggerFactory.getLogger(SearchMembersUseCase.class);
   
   private final UserGateway userGateway;
+  private final WorkoutGateway workoutGateway;
+  private final RoutineGateway routineGateway;
   
-  public SearchMembersUseCase(UserGateway userGateway) {
+  public SearchMembersUseCase(UserGateway userGateway, WorkoutGateway workoutGateway, RoutineGateway routineGateway) {
     this.userGateway = userGateway;
+    this.workoutGateway = workoutGateway;
+    this.routineGateway = routineGateway;
   }
   
   @Override
@@ -44,18 +53,10 @@ public class SearchMembersUseCase implements UseCaseInterface<ListUsersOutput, S
     // Fetch users with filter
     PaginatedResult<User> paginatedUsers = userGateway.findAll(filter, page, size);
     
-    // Convert to output
+    // Convert to output with enriched stats
     List<UserOutput> userOutputs = paginatedUsers.items().stream()
-        .map(user -> new UserOutput(
-            user.getId(),
-            user.getName(),
-            user.getEmail(),
-            user.getRole(),
-            user.getStatus(),
-            user.getCoachId(),
-            user.getWorkoutPerWeek()
-        ))
-        .collect(Collectors.toList());
+        .map(this::enrichUserWithStats)
+        .toList();
     
     LOGGER.info("[SearchMembersUseCase] Found {} active members", userOutputs.size());
     
@@ -67,5 +68,24 @@ public class SearchMembersUseCase implements UseCaseInterface<ListUsersOutput, S
         paginatedUsers.totalPages()
     );
   }
+  
+  private UserOutput enrichUserWithStats(User user) {
+    UserOutput baseOutput = UserOutput.from(user);
+    
+    // Fetch last workout date
+    Instant lastWorkoutDate = null;
+    List<WorkoutSession> recentWorkouts = workoutGateway.findRecentByMemberId(user.getId(), 1);
+    if (!recentWorkouts.isEmpty()) {
+      WorkoutSession lastWorkout = recentWorkouts.get(0);
+      lastWorkoutDate = lastWorkout.getEndedAt() != null ? lastWorkout.getEndedAt() : lastWorkout.getStartedAt();
+    }
+    
+    // Fetch assigned routines
+    List<Routine> routines = routineGateway.findAllByMemberId(user.getId());
+    List<AssignedRoutineOutput> assignedRoutines = routines.stream()
+        .map(AssignedRoutineOutput::from)
+        .toList();
+    
+    return baseOutput.withWorkoutStats(lastWorkoutDate, assignedRoutines);
+  }
 }
-
